# demon

./: CMakeLists.txt  README.md  README.txt  main.c  makefile  test.sh
headers/: bool.h  config.h  dir.h  file.h  filelist.h  filetype.h  parse.h  sync.h  timestamp.h
sources/: config.c  dir.c  file.c  filelist.c  help.c  main.c  parse.c  sync.c  timestamp.c
tmp/: plik  plik.c
